--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <title>Open Source Summit Japan 2023 Live Streams</title>
@@ -35,90 +36,108 @@ body {
 
 <div class="item-container">
 
-<div class="item">
-Keynotes - Hall B<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/3J2WHLXBUXA?si=jqr7PqX5_gpkVHP_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-Automotive Linux Summit - Rcpt Rm 1<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/UhkhjiZEyps?si=hbZxWVoRkOOrlJin" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Automotive Linux Summit - Rcpt Rm 1 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/qdzvBuMMe-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-Keynotes - Hall B<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/9Fek6fSfBew?si=XSooeewrNxuTIehg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-OSPOCon - Rcpt Rm 2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/7PIpIi3AVgA?si=5F2vo8Lf7jVF0nPg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Automotive Linux Summit - Rcpt Rm 1 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/UhkhjiZEyps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-CloudOpen - Hall B2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/JTUJdjZRl8U?si=7s-i_TUvCEXFdaQO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-LinuxCon/CloudOpen/Emerging OS<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/KEdgim-h8Q0?si=zM_o3whu0zXrv3kq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Automotive Linux Summit - Rcpt Rm 2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/egRAMj2IpOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-Embedded IoT Summit - Conf Rm 6<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/f6zOknMOzaw?si=DgV-Mwcdtq_ZEMss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-CotainerCon - Conf Rm 2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/hsk_AXfyQZc?si=LrLp3ig6IRWYeAyF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - CloudOpen - Hall B2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/JTUJdjZRl8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-Automotive Linux Summit (Rcpt Rm 1)<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/qdzvBuMMe-E?si=aiPK3EOaSB7F_0Qf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-Automotive Linux Summit - Rcpt Rm 2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/egRAMj2IpOQ?si=LahAByErwJB9YrA9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - CloudOpen - Hall B2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/iHD4TudQyBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-Emerging OS Forum<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/8yaqlg39rfc?si=cyB9DGIS24itDsjX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-Operations Management Summit - Conf Rm 2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/uFRPDApMNxc?si=9LmCCCQTL-wp0iY6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - ContainerCon - Conf Rm 2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/hsk_AXfyQZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-LinuxCon - Conf Rm 1<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/rHLhuJsrG0w?si=j0XMNI1JmBVVY8Jh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-CloudOpen - Hall B2<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/iHD4TudQyBY?si=90fkduAvyjIPIR49" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Embedded IoT Summit - Conf Rm 6 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/f6zOknMOzaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-<div class="item">
-Open Source Leadership Summit - Hall B1<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/YGup0rkK5Sk?si=zX0E0n_WdXMFol3B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
 
 <div class="item">
-Emerging OS Forum - Board Room<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/N_0QDOZ-_GE?si=p_yZnMlvrvT-qwO5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Emerging OS Forum - Board Room - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/N_0QDOZ-_GE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
+
 <div class="item">
-SupplyChainSecurityCon - Conf Rm 6<br/>
-<iframe width="380" height="200" src="https://www.youtube.com/embed/6g1PSNaGJyg?si=Kbgfps_caOQFw2Dy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+OSS Japan 2023 - Emerging OS Forum / Critical Software Summit - Conf Rm 1 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/8yaqlg39rfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
+
+
+<div class="item">
+OSS Japan 2023 - Keynotes - Hall B - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/9Fek6fSfBew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - Keynotes - Hall B - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/3J2WHLXBUXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - LinuxCon - Conf Rm 1 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/rHLhuJsrG0w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - LinuxCon/CloudOpen/Emerging OS Forum - Board Room - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/KEdgim-h8Q0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - OSPOCon - Rcpt Rm 2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/7PIpIi3AVgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - Open Source Leadership Summit - Hall B1 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/YGup0rkK5Sk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - Operations Management Summit - Conf Rm 2 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/uFRPDApMNxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+<div class="item">
+OSS Japan 2023 - SupplyChainSecurityCon - Conf Rm 6 - Live from Tokyo, Japan<br/>
+<iframe width="380" height="200" src="https://www.youtube.com/embed/6g1PSNaGJyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
 
 </div><!-- /item-container -->
 
